--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MaGloCon.github.io/meet_app",
+  "homepage": "https://maglocon.github.io/meet_app/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
