--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "jest-cucumber": "^4.4.0",
+    "puppeteer": "^18.1.0"
   },
   "eslintConfig": {
     "extends": [
