--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^4.1.0",
     "workbox-background-sync": "^7.1.0",
     "workbox-broadcast-update": "^7.1.0",
